css/src/components/_products.scss
.products {
    overflow: hidden;

    .ast-container {
        padding-left: 0;
        padding-right: 0;

        .container {
            padding: 0;
        }

        .products__heading {
            margin-bottom: 0;
        
            @include max-screen(375px) {
                max-width: 80%;
            }
            @media medium {
                margin-left: 0.5rem!important;
            }
        }
    }

    &.background--warm-contrast {
        background-color: $neutral-warm-light;

        .products__slider {

            &::before,
            &::after {
                background-color: $neutral-warm-light;
            }
        }
    }

    @include medium {
        overflow: hidden;
    }

    .container {
        display: flex;
        align-items: center;
        justify-content: space-between;
        flex-wrap: wrap;
    }

    .bapf_sfa_taxonomy {
        span {
            display: none;
        }
    }

    .bapf_sfa_unall {
        display: none;
    }

    &.section-margin {
        .products__link {
            @media (max-width: 1024px) {
                margin-bottom: 40px;
            }
        }
    }

    .product__list {
        padding-top: 32px!important;
        display: flex;
    }
}

.products+.products {
    margin-top: 0;

    @include medium {
        margin-top: 40px;
    }
}

.products__link {
    cursor: pointer;

    &.btn--arrow {
        color: $color-green-dark;
    }

    @include medium {
        order: 2;
        margin-left: 0.5rem;
    }
}

.products__slider {
    position: relative;
    width: 100%;
    padding-top: 32px;

    &::before,
    &::after {
        content: '';
        position: absolute;
        top: 0;
        bottom: 0;
        height: 100%;
        width: 100%;
        z-index: 2;
        background-color: $white;
    }

    &::before {
        left: -100%;
    }

    &::after {
        right: -100%;
    }

    .products__item {
        padding: 16px;
        min-height: 312px;
        background: transparent;
        width: 100%;

        @include medium {
            padding-bottom: 16px;
            min-height: 286px;
            height: auto;
            min-height: 290px;
        }

        @include phone {
            max-width: 240px;
        }

        img {
            height: 100%;
        }

    }

    .products__item-image-wrapper {
        max-height: 250px;
        margin-bottom: 15px;
    }

    .category__products-item-btn-wrapper {
        padding: 10px 16px 16px;
        display: flex;
        justify-content: center;
        bottom: -60px;

        @include medium {
            padding: 0;
            z-index: 1;
            justify-content: flex-start;
            bottom: 0;
            flex-grow: 1;
            display: flex;
            align-items: flex-end;
        }

        .product__item-btn--descktop {
            padding: 13px 10px;

            @include medium {
                padding: 8px 30px;
                opacity: 1;
            }
        }
    }

    .products__item-link {
        color: $neutral-gray-dark;
        text-decoration: none;

        &:hover {
            color: $neutral-green-dark;
        }
    }

    .product__item-rating {
        margin-bottom: 8px;
        display: flex;
        align-items: baseline;
        text-align: left;
    }

    .splide__track {
        width: 99%;
    }
    
    .splide__arrow {
        background: transparent;

        &.splide__arrow--prev {
            margin-left: -2%;
        }
        &.splide__arrow--next {
            margin-right: -2%;
        }

        @include phone {
            top: -12px;
            height: 21px;
            width: 21px;
            font-size: 14px;

            &.splide__arrow--prev {
                margin-left: 78%;
            }
            &.splide__arrow--next {
                margin-right: 0;
            }
        }

        svg {
            fill: #55761f;
            transition: all .3s linear;

            &:hover {
                fill: #F4D060;
            }
        }
    }

    @include phone {
        button.splide__arrow{
            font-size: 14px;
        }
    }

    .splide__pagination {
        display: none;
    }
}

.products__list {
    padding-top: 32px;
    flex-basis: 100%;
    display: flex;
    .splide__slide {
        margin: 0px 2px;
    }
}
.product__item-rating {
    margin-bottom: 8px;
    display: flex;
    align-items: baseline;
    text-align: left;
}
.products__item-prices {
    display: flex;
    flex-grow: 1;
    align-items: flex-end;

    .price {
        position: relative;
        font-weight: 500;
        font-size: 0.875rem;
        line-height: 1.5;
        
    }
}
span.price {
    color: $neutral-green-dark!important;
}
.woocommerce-js div.product span.price {
    font-weight: 500;
    font-size: 0.875rem;
    line-height: 1.5;
}
div.products__item-btn-wrapper {
    text-align: center;
    margin: 4px 0;
    a.button {
        @include button-styles;
        padding: 16px 26px;

        &:hover {
            color: #fff;
        }
    }

    .added_to_cart {
        display: block;
    }
}
.woocommerce-js a.button.added::after {
    content: "";
}
.products__item .btn.added {
    padding: 16px 26px;
}
.category__products-item .products__item-prices {
    position: relative;
    font-weight: 500;
    font-size: 0.875rem!important;
    line-height: 1.5;
    color: $neutral-green-dark!important;
}
.products .ast-container .products__heading {
    @include max-screen($medium-size){
        margin-left: 0.5rem!important;
    }
}
.woocommerce-js div.product span.onsale {
    background-color: var(--ast-global-color-8);
}

